--- a/PersonalWebsite_v2/appsettings.json
+++ b/PersonalWebsite_v2/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "sqlConnection": "server=.; database=MyDb; Integrated Security=true"
+  },
   "AllowedHosts": "*"
 }
