--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+* .cshtml linguist-language=C#
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
@@ -61,3 +62,8 @@
 #*.PDF   diff=astextplain
 #*.rtf   diff=astextplain
 #*.RTF   diff=astextplain
+#####################vendored######################
+*.cs linguist-detectable=true  
+*.js linguist-detectable=false  
+*.html linguist-detectable=false  
+*.css linguist-detectable=false  
